--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <style>
 @import url('https://fonts.googleapis.com/css?family=Play');
 </style>
@@ -99,6 +100,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <!-- <li class="nav-item"><a class="nav-link" href="#my-store-13466392">shop1</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="shop.html">shop</a></li>
                         <li class="nav-item"><a class="nav-link" href="recipe.html">recipe</a></li>
+                          <li class="nav-item"><a class="nav-link" href="kitchens0.html">broucher</a></li>
                   <!-- <li class="nav-item"><a class="nav-link" href="contest.html">IPL contest</a></li> -->
                   <li class="nav-item"><a class="nav-link" href="#about">about</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="#news">faq</a></li> -->
@@ -128,17 +130,17 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="col-md-6">
                 <h4><span style="color:#369b0b;font-size:90%;margin-bottom:-20px;">made natural</span> </h4>
 
-                    <h1 style="font-family:'Comfortaa',Bold;font-size:300%;">Base-Gravy </h1> <h3 style="font-family:'Comfortaa',Bold;font-size:100%;">a ready to cook<span style="text-decoration:red line-through;">
+                    <h1 style="font-family: 'Poppins', sans-serif,Bold;font-size:300%;">Base-Gravy </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;">a ready to cook<span style="text-decoration:red line-through;">
  magic</span> masala Gravy</span> </h3>
-                <p style="font-family:'Roboto', sans-serif;font-size:130%"> lets keep it simple. <br> there is no magic here, just traditional cooking with high quality farm ingredients. <br> <br>cooking time reduced to just 10 minutes while tons of customization possible, so today's kids never miss their <br>Amma's Kai Pakuvam! </p>
+                <p style="font-family: 'Poppins', sans-serif;font-size:130%"> lets keep it simple. <br> there is no magic here, just traditional cooking with high quality farm ingredients. <br> <br>cooking time reduced to just 10 minutes while tons of customization possible, so today's kids never miss their <br>Amma's Kai Pakuvam! </p>
                 <!-- <h1 style="font-family:'Comfortaa',Bold;font-size:200%;"> natural,<br/>
                   healthy<br/>
                   & <br/>tasty!<br><br></h1> -->
                   <div class="text" style="margin-top:-50px;">
-                    <p style="font-size:150%; font-family: 'Convergence', sans-serif;color:#000000;">spend more time</p>
+                    <p style="font-size:150%; font-family: 'Poppins', sans-serif,;color:#000000;">spend more time</p>
                     <p>
-                          <span class="word green"style="font-size:150%;font-family: 'Convergence', sans-serif;"> at-dinning.</span>
-                      <span class="word wisteria"style="font-size:150%;font-family: 'Convergence', sans-serif;">not-kitchen.</span>
+                          <span class="word green"style="font-size:150%;font-family: 'Poppins', sans-serif;"> at-dinning.</span>
+                      <span class="word wisteria"style="font-size:150%;font-family: 'Poppins', sans-serif;">not-kitchen.</span>
                       <!-- <span class="word belize">natural.</span>
                       <span class="word pomegranate">tasty.</span> -->
                     </p>
@@ -147,9 +149,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <a href="shop.html">Shop Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
 
             <div class="col-md-6">
-
-              <br>
-                  <img class="card-img-top img-fluid" src="images/banner-img.png" alt="">
+              <!-- <br> -->
+                <img class="card-img-top img-fluid" src="images/banner-img.png" alt="">
             </div>
         </div>
     </div>
@@ -178,9 +179,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     </div>
 </div> -->
 <br>
+
 <div class="container-fluid gtco-feature" id="services">
     <div class="container" >
-
         <div class="row">
             <div class="col-md-7">
                 <div class="cover">
@@ -189,13 +190,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <svg
                                 class="back-bg"
                                 width="100%" viewBox="0 0 900 700" style="position:absolute; z-index: -1">
-                            <defs>
+                             <defs>
                                 <linearGradient id="PSgrad_01" x1="64.279%" x2="0%" y1="76.604%" y2="0%">
-                                  <stop offset="0%" stop-color="rgb(17,79,121)" stop-opacity="1"/>
-                                    <stop offset="100%" stop-color="rgb(77,139,181)" stop-opacity="1"/>
+
+                                    <stop offset="0%" stop-color="rgb(253, 217, 53)" stop-opacity="1"/>
+                                    <stop offset="100%" stop-color="rgb(255, 255, 255)" stop-opacity="1"/>
                                 </linearGradient>
 
-                            </defs>
+                            </defs>     <!-- this is blue back box code-->
+
                             <path fill-rule="evenodd" opacity="1.102" fill="url(#PSgrad_01)"
                                   d="M616.656,2.494 L89.351,98.948 C19.867,111.658 -16.508,176.639 7.408,240.130 L122.755,546.348 C141.761,596.806 203.597,623.407 259.843,609.597 L697.535,502.126 C748.221,489.680 783.967,441.432 777.751,392.742 L739.837,95.775 C732.096,35.145 677.715,-8.675 616.656,2.494 Z"/>
                         </svg>
@@ -206,18 +209,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                                 <path d="M89.479,0.180 L512.635,25.932 C568.395,29.326 603.115,76.927 590.357,129.078 L528.827,380.603 C518.688,422.048 472.661,448.814 427.190,443.300 L73.350,400.391 C32.374,395.422 -0.267,360.907 -0.002,322.064 L1.609,85.154 C1.938,36.786 40.481,-2.801 89.479,0.180 Z"></path>
                             </clipPath>
                             <!-- xlink:href for modern browsers, src for IE8- -->
-                            <image clip-path="url(#clip-path)" xlink:href="images/base.jpg" width="100%"
-                                   height="465" class="svg__image"></image>
+                            <!-- <image clip-path="url(#clip-path)" xlink:href="images/base.jpg" width="100%"
+                                   height="465" class="svg__image"></image> -->
                         </svg>
                     </div>
                 </div>
             </div>
             <div class="col-md-5">
-              <h2 style="font-family:'Comfortaa',Bold;font-size:150%;"> we are your nutrition partner!<br>
+              <h2 style="font-family: 'Poppins', sans-serif Bold;font-size:150%;"> we are your nutrition partner!<br>
                   providing you with our all natural and fresh ready to cook Base Gravy </h2>
-              <p style="font-family:'Roboto', sans-serif;"> Food is the one thing that should never be compromised even if everything around us changes. So we got you our Fresh ready-to-cook Base-Gravy to eat healthy in this fast phase lifestyle.
+              <p style="font-family: 'Poppins', sans-serif;"> Food is the one thing that should never be compromised even if everything around us changes. So we got you our Fresh ready-to-cook Base-Gravy to eat healthy in this fast phase lifestyle.
                 <p>
-                  <small style="font-family:'Roboto', sans-serif;">We make sure you get healthy hygienic food every time and so you never need to worry about your food habits.
+                  <small style="font-family: 'Poppins', sans-serif;">We make sure you get healthy hygienic food every time and so you never need to worry about your food habits.
                   </small>
               </p>
               <a href="#">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
@@ -237,10 +240,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                      width="100%"
                      viewBox="0 0 1000 800">
                     <defs>
+
                         <linearGradient id="PSgrad_02" x1="64.279%" x2="0%" y1="76.604%" y2="0%">
-                          <stop offset="0%" stop-color="rgb(255,222,89)" stop-opacity="1"/>
-                          <stop offset="100%" stop-color="rgb(249,245,134)" stop-opacity="1"/>
-                        </linearGradient>
+                          <stop offset="0%" stop-color="rgb(253, 217, 53)" stop-opacity="1"/>
+                          <stop offset="100%" stop-color="rgb(255, 255, 255)" stop-opacity="1"/>
+                      </linearGradient>
+
                     </defs>
                     <path fill-rule="evenodd" opacity="1.102" fill="url(#PSgrad_02)"
                           d="M801.878,3.146 L116.381,128.537 C26.052,145.060 -21.235,229.535 9.856,312.073 L159.806,710.157 C184.515,775.753 264.901,810.334 338.020,792.380 L907.021,652.668 C972.912,636.489 1019.383,573.766 1011.301,510.470 L962.013,124.412 C951.950,45.594 881.254,-11.373 801.878,3.146 Z"/>
@@ -463,37 +468,12 @@ lots of love<br><br><br><br><br>
                     </div>
                 </div>
             </div>
-            <div class="card text-center"><img class="card-img-top" src="images/Websitekoozh.png" alt="">
-                            <div class="card-body">
-                                <h5>Kati Koozh<br/>
-                                    <span> kezhvaragu</span></h5>
-                                <p class="card-text" style="font-family:'Play', sans-serif; color:#000000;text-align: center; font-size:100%;">made with<br>
-                                  Fermented Kezhvaragu<br/>
-                                  Rice<br/>
-                                  Water<br/>
-                                  Salt<br/>
-
-                                  &<br/>
-                                  lots of love<br><br>
-                                  <br/>
-                                  <br/>
-                                  <br/><br/>
-                                  <br/>
-                                  <br/>
-                                  <br/>
-                                  <br/>
-                                  <br/>
-                                  <br/>
-                                  <br/>
-                                   </p>
-                            </div>
-                        </div>
 
         </div>
     </div>
 </div>
 
-<div class="container-fluid gtco-testimonials"  id="about">
+<!-- <div class="container-fluid gtco-testimonials"  id="about">
     <div class="container">
       <h2 style="font-family:'Comfortaa',Bold;font-size:150%;" >this is how we make it for you</h2>
         <div class="row">
@@ -544,7 +524,7 @@ lots of love<br><br><br><br><br>
     </div>
 </div>
 </div>
-</div>
+</div> -->
 <!-- <div class="container-fluid gtco-logo-area">
     <div class="container">
         <div class="row">
@@ -684,7 +664,7 @@ lots of love<br><br><br><br><br>
 
 </div>
 <div class="col-12">
-    <p>&copy; 2019. All Rights Reserved. CurryUpFreshFood.
+    <p>&copy; 2020. All Rights Reserved. CurryUpFreshFood.
 </div>
 </div>
 
@@ -712,7 +692,7 @@ lots of love<br><br><br><br><br>
 </div> -->
 <div class="feedback" style="display: block;">
 <a href="shop.html">
-  <i class="material-icons" style="color:#000000;">
+  <i class="material-icons" style="color:#2a8120;">
 store
 
 </i>
