--- a/test.html
+++ b/test.html
@@ -155,6 +155,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
 </div>
+<br>
+
 <!-- <div class="container-fluid gtco-feature" id="services">
     <div class="container">
         <div class="row">
@@ -187,31 +189,10 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="cover">
                   <br>
                     <div class="card">
-                        <svg
-                                class="back-bg"
-                                width="100%" viewBox="0 0 900 700" style="position:absolute; z-index: -1">
-                             <defs>
-                                <linearGradient id="PSgrad_01" x1="64.279%" x2="0%" y1="76.604%" y2="0%">
 
-                                    <stop offset="0%" stop-color="rgb(253, 217, 53)" stop-opacity="1"/>
-                                    <stop offset="100%" stop-color="rgb(255, 255, 255)" stop-opacity="1"/>
-                                </linearGradient>
+  <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1596994253/CUWebsite/3_aeahtp.png" alt="">
+                            <!-- this is blue back box code-->
 
-                            </defs>     <!-- this is blue back box code-->
-
-                            <path fill-rule="evenodd" opacity="1.102" fill="url(#PSgrad_01)"
-                                  d="M616.656,2.494 L89.351,98.948 C19.867,111.658 -16.508,176.639 7.408,240.130 L122.755,546.348 C141.761,596.806 203.597,623.407 259.843,609.597 L697.535,502.126 C748.221,489.680 783.967,441.432 777.751,392.742 L739.837,95.775 C732.096,35.145 677.715,-8.675 616.656,2.494 Z"/>
-                        </svg>
-                        <!-- *************-->
-
-                        <svg width="100%" viewBox="0 0 700 500">
-                            <clipPath id="clip-path">
-                                <path d="M89.479,0.180 L512.635,25.932 C568.395,29.326 603.115,76.927 590.357,129.078 L528.827,380.603 C518.688,422.048 472.661,448.814 427.190,443.300 L73.350,400.391 C32.374,395.422 -0.267,360.907 -0.002,322.064 L1.609,85.154 C1.938,36.786 40.481,-2.801 89.479,0.180 Z"></path>
-                            </clipPath>
-                            <!-- xlink:href for modern browsers, src for IE8- -->
-                            <!-- <image clip-path="url(#clip-path)" xlink:href="images/base.jpg" width="100%"
-                                   height="465" class="svg__image"></image> -->
-                        </svg>
                     </div>
                 </div>
             </div>
@@ -227,6 +208,105 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       </div>
   </div>
 </div>
+
+
+<div class="container-fluid gtco-banner-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h4><span style="color:#369b0b;font-size:90%;margin-bottom:-20px;">made natural</span> </h4>
+
+                    <h1 style="font-family: 'Poppins', sans-serif,Bold;font-size:300%;">Base-Gravy </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;">a ready to cook<span style="text-decoration:red line-through;">
+ magic</span> masala Gravy</span> </h3>
+                <p style="font-family: 'Poppins', sans-serif;font-size:130%"> lets keep it simple. <br> there is no magic here, just traditional cooking with high quality farm ingredients. <br> <br>cooking time reduced to just 10 minutes while tons of customization possible, so today's kids never miss their <br>Amma's Kai Pakuvam! </p>
+                <!-- <h1 style="font-family:'Comfortaa',Bold;font-size:200%;"> natural,<br/>
+                  healthy<br/>
+                  & <br/>tasty!<br><br></h1> -->
+                  <div class="text" style="margin-top:-50px;">
+                    <p style="font-size:150%; font-family: 'Poppins', sans-serif,;color:#000000;">spend more time</p>
+                    <p>
+                          <span class="word green"style="font-size:150%;font-family: 'Poppins', sans-serif;"> at-dinning.</span>
+                      <span class="word wisteria"style="font-size:150%;font-family: 'Poppins', sans-serif;">not-kitchen.</span>
+                      <!-- <span class="word belize">natural.</span>
+                      <span class="word pomegranate">tasty.</span> -->
+                    </p>
+                  </div>
+      <!-- <p>Say CurryUp</p> -->
+                <a href="shop.html">Shop Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+
+            <div class="col-md-6">
+              <!-- <br> -->
+                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1596994253/CUWebsite/5_jmsatv.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid gtco-banner-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <h4><span style="color:#369b0b;font-size:90%;margin-bottom:-20px;">made natural</span> </h4>
+
+                    <h1 style="font-family: 'Poppins', sans-serif,Bold;font-size:300%;">Base-Gravy </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;">a ready to cook<span style="text-decoration:red line-through;">
+ magic</span> masala Gravy</span> </h3>
+                <p style="font-family: 'Poppins', sans-serif;font-size:130%"> lets keep it simple. <br> there is no magic here, just traditional cooking with high quality farm ingredients. <br> <br>cooking time reduced to just 10 minutes while tons of customization possible, so today's kids never miss their <br>Amma's Kai Pakuvam! </p>
+                <!-- <h1 style="font-family:'Comfortaa',Bold;font-size:200%;"> natural,<br/>
+                  healthy<br/>
+                  & <br/>tasty!<br><br></h1> -->
+                  <div class="text" style="margin-top:-50px;">
+                    <p style="font-size:150%; font-family: 'Poppins', sans-serif,;color:#000000;">spend more time</p>
+                    <p>
+                          <span class="word green"style="font-size:150%;font-family: 'Poppins', sans-serif;"> at-dinning.</span>
+                      <span class="word wisteria"style="font-size:150%;font-family: 'Poppins', sans-serif;">not-kitchen.</span>
+                      <!-- <span class="word belize">natural.</span>
+                      <span class="word pomegranate">tasty.</span> -->
+                    </p>
+                  </div>
+      <!-- <p>Say CurryUp</p> -->
+                <a href="shop.html">Shop Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+
+            <div class="col-md-6">
+              <!-- <br> -->
+                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1596994254/CUWebsite/10_wveoz4.png" alt="">
+            </div>
+        </div>
+    </div>
+</div>
+
+<br>
+
+
+<br>
+
+<div class="container-fluid gtco-feature" id="services">
+    <div class="container" >
+        <div class="row">
+            <div class="col-md-7">
+                <div class="cover">
+                  <br>
+                    <div class="card">
+
+  <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1596994254/CUWebsite/10_wveoz4.png" alt="">
+                            <!-- this is blue back box code-->
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+              <h2 style="font-family: 'Poppins', sans-serif Bold;font-size:150%;"> we are your nutrition partner!<br>
+                  providing you with our all natural and fresh ready to cook Base Gravy </h2>
+              <p style="font-family: 'Poppins', sans-serif;"> Food is the one thing that should never be compromised even if everything around us changes. So we got you our Fresh ready-to-cook Base-Gravy to eat healthy in this fast phase lifestyle.
+                <p>
+                  <small style="font-family: 'Poppins', sans-serif;">We make sure you get healthy hygienic food every time and so you never need to worry about your food habits.
+                  </small>
+              </p>
+              <a href="#">Learn More <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+      </div>
+  </div>
+</div>
+
+
 <div class="container-fluid gtco-features" id="about">
     <div class="container">
         <div class="row">
