--- a/test.html
+++ b/test.html
@@ -132,18 +132,13 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                     <h1 style="font-family: 'Poppins', sans-serif,Bold;font-size:300%;">Base-Gravy </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;">a ready to cook<span style="text-decoration:red line-through;">
  magic</span> masala Gravy</span> </h3>
-                <p style="font-family: 'Poppins', sans-serif;font-size:130%"> lets keep it simple. <br> there is no magic here, just traditional cooking with high quality farm ingredients. <br> <br>cooking time reduced to just 10 minutes while tons of customization possible, so today's kids never miss their <br>Amma's Kai Pakuvam! </p>
+                <p style="font-family: 'Poppins', sans-serif;font-size:130%"> lets keep it simple. <br> there is no magic here, just traditional cooking with high quality farm ingredients.
                 <!-- <h1 style="font-family:'Comfortaa',Bold;font-size:200%;"> natural,<br/>
                   healthy<br/>
                   & <br/>tasty!<br><br></h1> -->
                   <div class="text" style="margin-top:-50px;">
-                    <p style="font-size:150%; font-family: 'Poppins', sans-serif,;color:#000000;">spend more time</p>
-                    <p>
-                          <span class="word green"style="font-size:150%;font-family: 'Poppins', sans-serif;"> at-dinning.</span>
-                      <span class="word wisteria"style="font-size:150%;font-family: 'Poppins', sans-serif;">not-kitchen.</span>
-                      <!-- <span class="word belize">natural.</span>
-                      <span class="word pomegranate">tasty.</span> -->
-                    </p>
+
+                
                   </div>
       <!-- <p>Say CurryUp</p> -->
                 <a href="shop.html">Shop Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
