--- a/test.html
+++ b/test.html
@@ -23,21 +23,20 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!-- custom CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/test.css">
       <!-- <link rel="stylesheet" href="css/style200.css"> -->
     <link href="https://fonts.googleapis.com/css?family=Convergence" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css?family=Comfortaa" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Comfortaa:700&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
     <style>
 @import url('https://fonts.googleapis.com/css?family=Play');
 </style>
 
 <meta name="google-site-verification" content="cePutOR4Vy4uAE81zD_Xf38jOFFBWQyim4B9lLZml8E" />
-
-
     <meta name="description" content="Fresh Base for making Biriyani, curry and lot more Food at home" />
     <meta name="keywords" content="Curry Up, fresh, food, biriyani, curryup, Base Gravy, food, ready to cook, curry, B1, B2, B3, B4, vegetable" />
     <title>CurryUp - Fresh Ready To Cook Base Gravy. Order your Gravy now</title>
@@ -45,29 +44,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-    <!-- <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png" /> -->
-
-<!-- referal -->
-<!-- <script type="text/javascript">
-  (function(g,r,s,f){g.growsurf={};g.grsfSettings={campaignId:"0c46vf",version:"1.0.0"};s=r.getElementsByTagName("head")[0];f=r.createElement("script");f.async=1;f.src="https://growsurf.com/growsurf.js"+"?v="+g.grsfSettings.version;f.setAttribute("grsf-campaign", g.grsfSettings.campaignId);!g.grsfInit?s.appendChild(f):"";})(window,document);
-</script> -->
-
 </head>
 <body>
-  <!-- Google Tag Manager (noscript) -->
-<!-- <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MQ34XLB"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-
-
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light bg-transparent" id="gtco-main-nav">
   <div class="container">
     <!-- <a class="navbar-brand">CurryUp</a> -->
@@ -86,27 +64,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 </div>
 
-    <!-- <div class="logo1"><img src="images/logo.png" alt="Curryup" /> </div> -->
-
-    <!-- <div class="container"><a class="navbar-brand"></a> -->
-    <!--  <a href="index.html"><img src="images/logo.png" alt="logo" /></a>
-  class="container"><a class="navbar-brand">CurryUp</a>-->
 
         <button class="navbar-toggler" data-target="#my-nav" onclick="myFunction(this)" data-toggle="collapse"><span
                 class="bar1"></span> <span class="bar2"></span> <span class="bar3"></span></button>
         <div id="my-nav" class="collapse navbar-collapse">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="#">home</a></li>
-                <!-- <li class="nav-item"><a class="nav-link" href="#my-store-13466392">shop1</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="shop.html">shop</a></li>
                         <li class="nav-item"><a class="nav-link" href="recipe.html">recipe</a></li>
                           <li class="nav-item"><a class="nav-link" href="test.html">broucher</a></li>
-                  <!-- <li class="nav-item"><a class="nav-link" href="contest.html">IPL contest</a></li> -->
                   <li class="nav-item"><a class="nav-link" href="#about">about</a></li>
-                <!-- <li class="nav-item"><a class="nav-link" href="#news">faq</a></li> -->
-
-                <!-- <li class="nav-item"><a class="nav-link" href="#contact">contact</a></li> -->
-                  <!-- <li class="nav-item"><a class="nav-link" href="main.html">main</a></li> -->
             </ul>
             <form class="form-inline my-2 my-lg-0">
                 <a href="http://curryupfresh.com/#shop.html#!/~/signIn/" class="btn btn-outline-dark my-2 my-sm-0 mr-3 text-uppercase">login/signup</a>
@@ -116,23 +83,18 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
 </nav>
-<!-- <a class="nav-link" href="contest.html">
-<figure class="swing">
-<button class="golden-btn"  style="font-size:1.6em;">
 
-      free shipping</button>
-</figure>
-</a> -->
-<!-- </a> -->
 <div class="container-fluid gtco-banner-area">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h4><span style="color:#369b0b;font-size:90%;margin-bottom:-20px;">made natural</span> </h4>
+                <h4><span style="color:#000000;font-size:90%;margin-bottom:-20px;">Ready To Cook</span> </h4>
 
-                    <h1 style="font-family: 'Poppins', sans-serif,Bold;font-size:300%;">Base-Gravy </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;">a ready to cook<span style="text-decoration:red line-through;">
- magic</span> masala Gravy</span> </h3>
-                <p style="font-family: 'Poppins', sans-serif;font-size:130%"> lets keep it simple. <br> there is no magic here, just traditional cooking with high quality farm ingredients.
+                    <h1 style="font-family: 'Poppins', sans-serif;font-size:300%;color:rgb(255, 156, 52);text-shadow: 4px 2px 6px #bbb8b8;">Base Gravy </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;"> </h3>
+                <p style="font-family: 'Poppins', sans-serif;font-size:110%"> Lets keep it simple.
+There is no magic here, just traditional cooking
+with high quality farm ingredients.<br><br>Just 3 easy steps and 10 minutes of cook time with our All Natural Ready to Cook Base Gravy.<br><br>Feel the taste of your Moms Kitchen at home,
+every time! every where!
                 <!-- <h1 style="font-family:'Comfortaa',Bold;font-size:200%;"> natural,<br/>
                   healthy<br/>
                   & <br/>tasty!<br><br></h1> -->
@@ -141,10 +103,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
       <br>
       <br>
                 <a href="shop.html">Shop Now <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
-
             <div class="col-md-6">
               <!-- <br> -->
-                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1596988212/CUWebsite/Untitled_design_1_p4r2ik.png" alt="">
+                <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1597050388/CUWebsite/Untitled_design_2_v2ps7e.png" alt="">
             </div>
         </div>
     </div>
