--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
 
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
+      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap" rel="stylesheet">
     <style>
 @import url('https://fonts.googleapis.com/css?family=Play');
 </style>
@@ -71,7 +71,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="#">home</a></li>
                 <li class="nav-item"><a class="nav-link" href="shop.html">shop</a></li>
-                        <li class="nav-item"><a class="nav-link" href="recipe.html">recipe</a></li>
+                        <li class="nav-item"><a class="nav-link" href="nav.html">nav</a></li>
                           <li class="nav-item"><a class="nav-link" href="test.html">broucher</a></li>
                   <li class="nav-item"><a class="nav-link" href="#about">about</a></li>
             </ul>
@@ -145,7 +145,7 @@ every time! every where!
                   <br>
                     <div class="card">
 
-  <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1596994253/CUWebsite/3_aeahtp.png" alt="">
+  <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1597056807/CUWebsite/14_njumwf.png" alt="">
                             <!-- this is blue back box code-->
 
                     </div>
