--- a/test.html
+++ b/test.html
@@ -89,7 +89,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class="row">
             <div class="col-md-6">
                 <h4><span style="color:#000000;font-size:90%;margin-bottom:-20px;">Ready To Cook</span> </h4>
-
                     <h1 style="font-family: 'Poppins', sans-serif;font-size:300%;color:rgb(255, 156, 52);text-shadow: 4px 2px 6px #bbb8b8;">Base Gravy </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;"> </h3>
                 <p style="font-family: 'Poppins', sans-serif;font-size:110%"> Lets keep it simple.
 There is no magic here, just traditional cooking
@@ -108,20 +107,14 @@ every time! every where!
 <br>
 <br>
 <!-- 222222222222222222222222 -->
-<div class="container-fluid gtco-feature" id="services">
+<div class="container-fluid gtco-feature" >
     <div class="container" >
         <div class="row">
-            <div class="col-md-7">
-                <div class="cover">
-                  <br>
-                    <div class="card">
-
+            <div class="col-md-5">
   <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1597056807/CUWebsite/14_njumwf.png" alt="">
                             <!-- this is blue back box code-->
-                    </div>
-                </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-7">
               <h1 style="font-family: 'Poppins', sans-serif;font-size:300%;color:rgb(255, 156, 52);text-shadow: 4px 2px 6px #bbb8b8;">3 Easy Steps </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;"> </h3>
               <p style="font-family: 'Poppins', sans-serif;"> Food is the one thing that should never be compromised even if everything around us changes. So we got you our Fresh ready-to-cook Base-Gravy to eat healthy in this fast phase lifestyle.
                 <p>
@@ -138,7 +131,6 @@ every time! every where!
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <h4><span style="color:#000000;font-size:90%;margin-bottom:-20px;">Ready To Cook</span> </h4>
 
                     <h1 style="font-family: 'Poppins', sans-serif;font-size:300%;color:rgb(255, 156, 52);text-shadow: 4px 2px 6px #bbb8b8;">All Natural </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;"> </h3>
                 <p style="font-family: 'Poppins', sans-serif;font-size:110%"> Lets keep it simple.
@@ -160,21 +152,14 @@ every time! every where!
 
 <br>
 <!-- 444444444444444444444 -->
-<div class="container-fluid gtco-feature" id="services">
+<div class="container-fluid gtco-feature" >
     <div class="container" >
         <div class="row">
-            <div class="col-md-7">
-                <div class="cover">
-                  <br>
-                    <div class="card">
-
+            <div class="col-md-5">
   <img class="card-img-top img-fluid" src="https://res.cloudinary.com/dbhyuiokujy/image/upload/v1597056807/CUWebsite/12_khwksj.png" alt="">
                             <!-- this is blue back box code-->
-
-                    </div>
-                </div>
             </div>
-            <div class="col-md-5">
+            <div class="col-md-7">
               <h1 style="font-family: 'Poppins', sans-serif;font-size:300%;color:rgb(255, 156, 52);text-shadow: 4px 2px 6px #bbb8b8;">3 Easy Steps </h1> <h3 style="font-family: 'Poppins', sans-serif;font-size:100%;"> </h3>
               <p style="font-family: 'Poppins', sans-serif;"> Food is the one thing that should never be compromised even if everything around us changes. So we got you our Fresh ready-to-cook Base-Gravy to eat healthy in this fast phase lifestyle.
                 <p>
@@ -185,9 +170,7 @@ every time! every where!
       </div>
   </div>
 </div>
-<br>
-
-
+<br
 <br>
 
 
